# smart-home-energy-monitor

./: .gitignore  README.md  docker-compose.yml  estimates.csv  sample.env
.github/workflows/: azure-static-web-apps-kind-sea-0bc019c0f.yml  deploy.yml
ai-service/: Dockerfile  main.py  models.py  pyproject.toml  query_helper.py
auth-service/: .dockerignore  Dockerfile  config.py  database.py  main.py  pyproject.toml  security.py
auth-service/models/: user_models.py
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  staticwebapp.config.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: Navbar.jsx  PrivateRoute.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Devices.jsx  Home.jsx  Login.jsx  Register.jsx
frontend/src/services/: aiService.js  authService.js  telemetryService.js
telemetry-service/: Dockerfile  config.py  database.py  initialize_data.py  main.py  models.py  pyproject.toml  security.py
